--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-three/fiber": "^8.17.10",
     "framer-motion": "^12.23.24",
     "geist": "^1.3.1",
+    "gsap": "^3.14.2",
     "i18next": "^25.8.4",
     "lenis": "^1.3.11",
     "next": "^14.2.25",
